TNO-12 Add Elasticsearch consumer Add dejavu service