@@ -6,5 +6,6 @@ read -p 'Repository Id: cabcgovtno-' varStagingRepoId
 if [ ! -z "$varStagingRepoId" ]
 then
   cd dal-db
+  export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
   mvn nexus-staging:release -P staging -DstagingRepositoryId="cabcgovtno-$varStagingRepoId"
 fi
